[package]
name = "sps30-hdlc"
version = "0.1.0"
edition = "2024"

[dependencies]
colour = { version = "2.1.0", optional = true }
hashbrown = { version = "0.16.1", optional = true }
cfg_block = "0.2.0"
clap = { version = "4.5.53", features = ["derive"] }
hdlc = { path = "lib/hdlc" }
log = { version = "0.4.29", optional = true }
serialport = { version = "4.8.1", features = ["usbportinfo-interface"] }
defmt = { version = "1.0.1", optional = true }
format_no_std = "1.2.0"
chrono = "0.4.42"

[features]
default = ["std"]
std = ["hdlc/std", "dep:log", "dep:colour"]
no_std = ["dep:hashbrown", "dep:defmt", "hdlc/no_std"]

[[bin]]
name = "linux_test"
features = ["std"]
